IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4/1/15: IMOD_4-8-29
3/31/15: Fixed clip average and other operations broken by 2/14/15 changes.

3/28/15: Made clip unwrap copy extra header when full file is processed.

3/26/15: Fixed slashmasksort.

3/19/15: IMOD_4-8-28
3/19/15: In eTomo - PEET fixed a problem where blurMaskStdDev was not being
saved when "User supplied binary file" was selected.(Bug# 1867)

3/16/15: Fixed Ccderaser taking mean inside instead of outside boundary
contours (In 4.7).

3/15/15: IMOD_4-7-14
3/15/15: Fixed fixCygPython.sh to put Cygwin on path before running commands 
(In 4.7).

3/9/15: IMOD_4-8-27
3/8/15: In eTomo - Fiducial Model Dialog changed the transferfid -x parameter
to an integer with two values (0 and 1).  A third value will be added later.

3/8/15: In eTomo, Changed the processchunks GPU list divider to ":".  In the
Batchruntomo Interface, temporarily added instructions for running
batchruntomo to the project log, fixed a problem with GPUMachineList and
multiple GPUs, fixed problems with opening 3dmod, and fixed the way defocus is
being displayed.  Fixed a variety of formatting problems in the processor
table.

3/4/15: Added ability to run NAD from Batchruntomo, and an option to specify
an SMTP server for email.

3/4/15: Modified Setupcombine to set up for using initial volume matching, and
made Batchruntomo use it when appropriate, so it can now combine data without
fiducials.  Changed ratio so that fallback thickness is used when calculated
thickness is less by a factor of 0.4 instead of 0.5.

3/3/15: Fixed clip filter to work with images having only one factor of 2 in X
(e.g., K2 images).

3/2/15: Added a script, Dualvolmatch, to get initial alignment between
dual-axis volumes when there are no corresponding fiducials.

3/1/15: Made Transferfid and Matchrotpairs evaluate mirrored as well as
unmirrored images by default.
